--- a/formats.html
+++ b/formats.html
@@ -505,7 +505,7 @@
     <main class="page-container">
         <header class="page-header">
             <h1 class="page-title">Формати змагань</h1>
-            <p class="page-subtitle">Детальний опис усіх форматів турнірів Stolar Carp. Ознайомтесь з правилами та особливостями кожного виду змагань.</p>
+            <p class="page-subtitle">Детальний STOLAR CARP. Ознайомтесь з правилами та особливостями кожного виду змагань.</p>
             <div class="title-underline"></div>
         </header>
 
@@ -521,36 +521,99 @@
                     <div class="accordion-content-inner">
                         <div class="format-card">
                             <h2 class="format-title">Турнір STOLAR CARP — Етапи та Фінал</h2>
-                            <p class="format-description">Масштабне змагання з серією відбіркових етапів та грандіозним фіналом серед найсильніших команд.</p>
-                            
-                            <div class="format-section">
-                                <h3 class="section-title">Структура</h3>
-                                <p>Турнір складається з декількох етапів та фінального змагання.</p>
-                                <ul class="format-list">
-                                    <li><strong>Етап 1, 2, 3...</strong> — відбіркові змагання на різних водоймах</li>
-                                    <li><strong>Фінал</strong> — заключне змагання за участі найкращих команд сезону</li>
-                                </ul>
-                            </div>
+<p class="format-description">
+    Головний сезонний турнір Stolar Carp, що складається з відбіркових етапів та великого фіналу серед найсильніших команд року.
+</p>
 
-                            <div class="format-section">
-                                <h3 class="section-title">Відбір у фінал</h3>
-                                <p>За результатами кожного етапу формується загальний рейтинг команд. Найкращі отримують право участі у фіналі.</p>
-                            </div>
+<!-- ЕТАПИ ТУРНІРУ -->
+<div class="format-section">
+    <h3 class="section-title">Етапи турніру</h3>
+    <p>
+        Кожен етап проходить у класичному форматі змагань. Результат визначається 
+        <strong>за загальною вагою всієї зловленої риби</strong>.  
+        У змаганнях беруть участь <strong>три зони: A, B, C</strong>.
+    </p>
 
-                            <div class="highlight-box">
-                                <h4 class="highlight-title">Критерій відбору:</h4>
-                                <p class="highlight-text">Сума балів за всіма етапами (очкова система) або загальна вага упійманих риб. Кількість команд-фіналістів визначається організаторами залежно від масштабу турніру.</p>
-                            </div>
+    <ul class="format-list">
+        <li><strong>Зона А — 1, 2, 3 місце</strong></li>
+        <li><strong>Зона B — 1, 2, 3 місце</strong></li>
+        <li><strong>Зона C — 1, 2, 3 місце</strong></li>
+        <li><strong>Big Carp</strong> — найбільший короп етапу</li>
+        <li><strong>Big Amur</strong> — найбільший амур етапу</li>
+    </ul>
+</div>
 
-                            <div class="format-section">
-                                <h3 class="section-title">Підрахунок етапів</h3>
-                                <p>Кожен етап може мати свій власний формат, але зазвичай результат визначається за загальною вагою упійманих риб команди.</p>
-                            </div>
+<!-- РЕЙТИНГ СЕЗОНУ -->
+<div class="format-section">
+    <h3 class="section-title">Рейтинг сезону</h3>
+    <p>
+        Команда отримує сезонні бали за кожен етап:
+    </p>
+    <ul class="format-list">
+        <li><strong>1 місце = 1 бал</strong></li>
+        <li><strong>2 місце = 2 бали</strong></li>
+        <li><strong>3 місце = 3 бали</strong></li>
+        <li>… і так далі</li>
+        <li><strong>Неучасть = 8 балів</strong></li>
+    </ul>
 
-                            <div class="format-section">
-                                <h3 class="section-title">Фінал</h3>
-                                <p>Окреме змагання зі своїм призовим фондом. Переможець турніру — команда з найкращим результатом у фіналі, незалежно від результатів попередніх етапів.</p>
-                            </div>
+    <p>
+        Сезонний рейтинг = <strong>сума балів за всі етапи</strong>.  
+        Чим менше балів, тим вище місце команди у сезоні.
+    </p>
+</div>
+
+<!-- ВИХІД ДО ФІНАЛУ -->
+<div class="highlight-box">
+    <h4 class="highlight-title">Вихід до Фіналу</h4>
+    <p class="highlight-text">
+        <strong>18 найкращих команд сезону</strong> за сумою балів проходять до 
+        <strong>Фіналу сезону STOLAR CARP</strong>.  
+        Фінал — це окреме престижне змагання, де визначається Чемпіон року.
+    </p>
+</div>
+
+<!-- ФІНАЛ -->
+<div class="format-section">
+    <h3 class="section-title">Фінал сезону</h3>
+    <p>
+        У фіналі беруть участь лише 18 команд, що пройшли відбір.  
+        Фінальний результат не пов’язаний із балами етапів — це окремий турнір.
+    </p>
+
+    <div class="highlight-box">
+        <h4 class="highlight-title">Організаційні деталі</h4>
+        <p class="highlight-text">
+            • <strong>Жеребкування</strong> — проводиться у четвер перед стартом.<br>
+            • <strong>Спільна вечеря</strong> — бограч, шашлик, вода для всіх учасників.<br>
+            • <strong>Окрема церемонія нагородження</strong> з кубками, медалями та подарунками партнерів.
+        </p>
+    </div>
+
+    <h3 class="section-title">Призовий фонд Фіналу</h3>
+    <ul class="format-list">
+        <li><strong>Загальний фонд: 30 000 грн</strong></li>
+        <li>1 місце — <strong>12 000 грн</strong></li>
+        <li>2 місце — <strong>10 000 грн</strong></li>
+        <li>3 місце — <strong>8 000 грн</strong></li>
+    </ul>
+
+    <h3 class="section-title">Нагороди</h3>
+    <ul class="format-list">
+        <li><strong>Кубки “Топи озера”</strong> — 1, 2, 3 місце</li>
+        <li><strong>9 кубків за зони</strong>:  
+            A — 1/2/3 · B — 1/2/3 · C — 1/2/3
+        </li>
+        <li><strong>Big Carp</strong> — кубок</li>
+        <li><strong>Big Amur</strong> — кубок</li>
+        <li><strong>Медалі всім учасникам фіналу</strong></li>
+    </ul>
+
+    <p>
+        Після завершення проходить урочиста церемонія нагородження:  
+        <strong>кубки, медалі, призи та подарунки від партнерів</strong>.
+    </p>
+</div>
                         </div>
                     </div>
                 </div>
