--- a/formats.html
+++ b/formats.html
@@ -530,7 +530,7 @@
     <h3 class="section-title">Етапи турніру</h3>
     <p>
         Кожен етап проходить у класичному форматі змагань. Результат визначається 
-        <strong>за загальною вагою всієї зловленої риби</strong>.  
+        <strong>за загальною вагою зловленої риби</strong>.  
         У змаганнях беруть участь <strong>три зони: A, B, C</strong>.
     </p>
 
@@ -559,7 +559,7 @@
 
     <p>
         Сезонний рейтинг = <strong>сума балів за всі етапи</strong>.  
-        Чим менше балів, тим вище місце команди у сезоні.
+        Чим менше балів, тим вище місце команди у сезонному рейтингу.
     </p>
 </div>
 
@@ -569,7 +569,7 @@
     <p class="highlight-text">
         <strong>18 найкращих команд сезону</strong> за сумою балів проходять до 
         <strong>Фіналу сезону STOLAR CARP</strong>.  
-        Фінал — це окреме престижне змагання, де визначається Чемпіон року.
+        Фінал — це змагання, де визначається Чемпіон року.
     </p>
 </div>
 
@@ -577,15 +577,14 @@
 <div class="format-section">
     <h3 class="section-title">Фінал сезону</h3>
     <p>
-        У фіналі беруть участь лише 18 команд, що пройшли відбір.  
-        Фінальний результат не пов’язаний із балами етапів — це окремий турнір.
+        У фіналі беруть участь лише 18 команд, що пройшли відбір.
     </p>
 
     <div class="highlight-box">
         <h4 class="highlight-title">Організаційні деталі</h4>
         <p class="highlight-text">
             • <strong>Жеребкування</strong> — проводиться у четвер перед стартом.<br>
-            • <strong>Спільна вечеря</strong> — бограч, шашлик, вода для всіх учасників.<br>
+            • <strong>Спільна вечеря</strong> — бограч, шашлик, для всіх учасників.<br>
             • <strong>Окрема церемонія нагородження</strong> з кубками, медалями та подарунками партнерів.
         </p>
     </div>
@@ -611,7 +610,7 @@
 
     <p>
         Після завершення проходить урочиста церемонія нагородження:  
-        <strong>кубки, медалі, призи та подарунки від партнерів</strong>.
+        <strong>кубки, медалі, призи та подарунки від партнерів та спонсорів</strong>.
     </p>
 </div>
                         </div>
