--- a/formats.html
+++ b/formats.html
@@ -480,19 +480,22 @@
             }
         }
     </style>
-</head>
-    
-<body class="rules-page">
-<header class="header">
+
+
+    <main class="page-container">
+        <header class="page-header">
+            <h1 class="page-title">Формати змагань</h1>
+            <p class="page-subtitle">Детальний STOLAR CARP. Ознайомтесь з правилами та особливостями кожного виду змагань.</p>
+            <div c<header class="header">
   <div class="container header__row">
-    <a class="logo" href="index.html">
+    <a class="logo" href="/index.html">
       <span class="logo__mark">SC</span>
       <span class="logo__text">STOLAR CARP</span>
     </a>
 
     <nav class="nav" id="nav">
       <a href="/index.html" class="nav__link">Головна</a>
-      <a href="/rules.html" class="nav__link nav__link--active">Регламент</a>
+      <a href="/rules.html" class="nav__link">Регламент</a>
       <a href="/formats.html" class="nav__link">Формати змагань</a>
       <a href="/register.html" class="nav__link">Реєстрація</a>
       <a href="/live.html" class="nav__link">Live</a>
@@ -503,15 +506,11 @@
       <a href="/cabinet.html" class="nav__link">Мій кабінет</a>
     </nav>
 
-    <button class="burger" id="burger"><span></span><span></span><span></span></button>
+    <button class="burger" id="burger">
+      <span></span><span></span><span></span>
+    </button>
   </div>
-</header>
-
-    <main class="page-container">
-        <header class="page-header">
-            <h1 class="page-title">Формати змагань</h1>
-            <p class="page-subtitle">Детальний STOLAR CARP. Ознайомтесь з правилами та особливостями кожного виду змагань.</p>
-            <div class="title-underline"></div>
+        </header>lass="title-underline"></div>
         </header>
 
         <div class="formats-accordion">
