--- a/formats.html
+++ b/formats.html
@@ -675,8 +675,37 @@
                             
                             <div class="format-section">
                                 <h3 class="section-title">1) BIGFISH TOTAL</h3>
-                                <p>Переможець визначається за найбільшою рибою, спійманою протягом турніру. Найпростіший і найзрозуміліший критерій.</p>
-                            </div>
+
+<p>
+    BigFish Total — окрема номінація, в якій беруть участь 
+    <strong>бажаючі команди</strong>.
+</p>
+
+<p><strong>Вартість одноразового внеску: 1500 грн</strong></p>
+
+<p>Переможці визначаються у трьох окремих категоріях:</p>
+
+<ul class="format-list">
+    <li>
+        <strong>Big Fish Day 1</strong> — найбільша риба, спіймана 
+        протягом <strong>першої доби</strong> (зважування №1 та №2)
+    </li>
+
+    <li>
+        <strong>Big Fish Day 2</strong> — найбільша риба, спіймана 
+        протягом <strong>другої доби</strong> (зважування №3 та №4)
+    </li>
+
+    <li>
+        <strong>Big Fish Overall</strong> — 
+        <u>найбільша риба серед усіх учасників BigFish Total</u>
+    </li>
+</ul>
+
+<p>
+    <strong>Доба 1:</strong> зважування №1 та №2<br>
+    <strong>Доба 2:</strong> зважування №3 та №4
+</p>
 
                             <div class="format-section">
                                 <h3 class="section-title">2) BIG-10 Pool</h3>
