--- a/formats.html
+++ b/formats.html
@@ -708,9 +708,46 @@
 </p>
 
                             <div class="format-section">
-                                <h3 class="section-title">2) BIG-10 Pool</h3>
-                                <p>Результат = сума ваги 10 найбільших риб команди. Комбінує кількість і якість — потрібно ловити багато і великих риб.</p>
-                            </div>
+    <h3 class="section-title">2) BIG-10 Pool</h3>
+
+    <p>
+        BIG-10 Pool — окрема номінація, в якій беруть участь 
+        <strong>бажаючі команди</strong>.
+    </p>
+
+    <p><strong>Вартість одноразового внеску: 2000 грн</strong></p>
+
+    <p>
+        Залік формується за принципом 
+        <strong>10 найбільших риб команди</strong>, виловлених протягом
+        усіх <strong>4 офіційних зважувань</strong>.
+    </p>
+
+    <ul class="format-list">
+        <li>
+            <strong>Мінімальна вага риби для входу в залік — 5.000 кг</strong>.
+        </li>
+
+        <li>
+            У таблицю потрапляють <strong>тільки 10 найбільших риб команди</strong>,
+            незалежно від того, коли вони були спіймані (зважування №1–4).
+        </li>
+
+        <li>
+            Якщо команда спіймала більше ніж 10 риб вагою 5+ кг — 
+            <strong>кожна нова більша риба автоматично вибиває найменшу рибу з десятки</strong>.
+        </li>
+
+        <li>
+            <strong>Переможець</strong> визначається за 
+            <strong>найбільшою сумарною вагою ТОП-10 риб</strong>.
+        </li>
+
+        <li>
+            Залік ведеться <strong>між усіма командами, що беруть участь у BIG-10 Pool</strong>.
+        </li>
+    </ul>
+</div>
                         </div>
                     </div>
                 </div>
