--- a/formats.html
+++ b/formats.html
@@ -707,7 +707,7 @@
 </p>
 
                             <div class="format-section">
-    <h3 class="section-title">2) BIG-10 Pool</h3>
+    <h3 class="section-title">2) Pool BIG-10 </h3>
 
     <p>
         BIG-10 Pool — окрема номінація, в якій беруть участь 
