--- a/formats.html
+++ b/formats.html
@@ -706,51 +706,40 @@
 
 </p>
 
-                            <div class="format-section">
-    <h3 class="section-title">2) Pool BIG-10 </h3>
+     <div class="format-section">
+    <h3 class="section-title">2) Трофейна Десятка</h3>
 
     <p>
-        BIG-10 Pool — окрема номінація, в якій беруть участь 
-        <strong>бажаючі команди</strong>.
+        «Трофейна Десятка» — окремий залік, у якому беруть участь 
+        <strong>бажаючі команди</strong>.  
+        У кожному з чотирьох зважувань формується таблиця з 
+        <strong>10 найбільших риб</strong> серед усіх учасників цього заліку.
     </p>
-
-    <p><strong>Вартість одноразового внеску: 2000 грн</strong></p>
 
     <p>
-        Залік формується за принципом 
-        <strong>10 найбільших риб команди</strong>, виловлених протягом
-        усіх <strong>4 офіційних зважувань</strong>.
+        До заліку потрапляють лише риби вагою 
+        <strong>від 5.000 кг</strong>.  
+        Коли таблиця заповнена (10 риб), кожна наступна більша риба 
+        <strong>вибиває найменшу</strong> зі списку.
     </p>
 
-    <ul class="format-list">
-        <li>
-            <strong>Мінімальна вага риби для входу в залік — 5.000 кг</strong>.
-        </li>
+    <p>
+        У Трофейній Десятці можуть бути риби будь-якої кількості команд —  
+        <strong>від 1 до 10 риб однієї команди</strong>, якщо вони входять у топ-10 зважування.
+    </p>
 
-        <li>
-            У таблицю потрапляють <strong>тільки 10 найбільших риб команди</strong>,
-            незалежно від того, коли вони були спіймані (зважування №1–4).
-        </li>
+    <p>
+        Призова сума кожного зважування формується з внесків учасників, 
+        тому <strong>залежить від кількості команд, що беруть участь</strong>.  
+        Кожна риба, що потрапила у Трофейну Десятку, приносить команді 
+        <strong>виплату за одне місце</strong>.
+    </p>
+</div>                        
 
-        <li>
-            Якщо команда спіймала більше ніж 10 риб вагою 5+ кг — 
-            <strong>кожна нова більша риба автоматично вибиває найменшу рибу з десятки</strong>.
-        </li>
-
-        <li>
-            <strong>Переможець</strong> визначається за 
-            <strong>найбільшою сумарною вагою ТОП-10 риб</strong>.
-        </li>
-
-        <li>
-            Залік ведеться <strong>між усіма командами, що беруть участь у BIG-10 Pool</strong>.
-        </li>
-    </ul>
+  </div>
+ </div>
 </div>
-                        </div>
-                    </div>
-                </div>
-            </article>
+</article>
 
         </div>
     </div>
