--- a/formats.html
+++ b/formats.html
@@ -444,7 +444,7 @@
 
     <h3 class="section-title">Призовий фонд Фіналу</h3>
     <ul class="format-list">
-        <li><strong>Загальний фонд: 30 000 грн</strong></li>
+        <li><strong>ТОП озера</strong></li>
         <li>1 місце — <strong>12 000 грн</strong></li>
         <li>2 місце — <strong>10 000 грн</strong></li>
         <li>3 місце — <strong>8 000 грн</strong></li>
