--- a/formats.html
+++ b/formats.html
@@ -512,34 +512,49 @@
                 </div>
             </article>
 
+            <!-- STALKER SOLO SC -->
+<article class="accordion-item">
+    <button class="accordion-header">
+        STALKER SOLO SC
+        <span class="accordion-indicator">Соло</span>
+    </button>
+
+    <div class="accordion-content">
+        <div class="accordion-content-inner">
             <div class="format-card">
-    <h2 class="format-title">STALKER SOLO SC</h2>
 
-    <p class="format-description">
-        Індивідуальний формат, у якому кожен Stalker змагається сам за себе.  
-        Один учасник — один сектор — один особистий результат.
-    </p>
+                <h2 class="format-title">STALKER SOLO SC</h2>
 
-    <div class="format-section">
-        <h3 class="section-title">Підрахунок результатів</h3>
-        <ul class="format-list">
-            <li><strong>Загальна вага</strong> — основний критерій.</li>
-            <li><strong>Зони A, B, C</strong> — усі учасники діляться на 3 зони.</li>
-        </ul>
+                <p class="format-description">
+                    Індивідуальний формат, у якому кожен Stalker змагається сам за себе.  
+                    Один учасник — один сектор — один особистий результат.
+                </p>
+
+                <div class="format-section">
+                    <h3 class="section-title">Підрахунок результатів</h3>
+                    <ul class="format-list">
+                        <li><strong>Загальна вага</strong> — основний критерій.</li>
+                        <li><strong>Зони A, B, C</strong> — усі учасники діляться на 3 зони.</li>
+                    </ul>
+                </div>
+
+                <div class="highlight-box">
+                    <h4 class="highlight-title">Нагородження</h4>
+                    <p class="highlight-text">
+                        <strong>Кубки та призи "Топ Озера"</strong>:  
+                        1 місце · 2 місце · 3 місце (загальний залік).
+                        <br><br>
+                        <strong>Зональні нагороди</strong> (A, B, C):  
+                        1, 2, 3 місця у кожній зоні.
+                        <br><br>
+                        Призи та подарунки від партнерів та спонсорів.
+                    </p>
+                </div>
+
+            </div>
+        </div>
     </div>
-
-    <div class="highlight-box">
-        <h4 class="highlight-title">Нагородження</h4>
-        <p class="highlight-text">
-            <strong>Кубки та призи "Топ Озера"</strong>:  
-            1 місце · 2 місце · 3 місце (загальний залік).
-            <br><br>
-            <strong>Зональні нагороди</strong> (A, B, C):  
-            1, 2, 3 місця у кожній зоні.
-            <br><br>
-            Призи та подарунки від партнерів та спонсорів.
-        </p>
-    </div>
+</article>
 </div>
                         </div>
                     </div>
