--- a/formats.html
+++ b/formats.html
@@ -430,7 +430,7 @@
 <div class="format-section">
     <h3 class="section-title">Фінал сезону</h3>
     <p>
-        У фіналі беруть участь лише 18 команд, що пройшли відбір.
+        У фіналі берують участь лише 18 команд, що пройшли відбір.
     </p>
 
     <div class="highlight-box">
@@ -513,49 +513,40 @@
             </article>
 
             <!-- STALKER SOLO SC -->
-<article class="accordion-item">
-    <button class="accordion-header">
-        STALKER SOLO SC
-        <span class="accordion-indicator">Соло</span>
-    </button>
+            <article class="accordion-item">
+                <button class="accordion-header">
+                    STALKER SOLO SC
+                    <span class="accordion-indicator">Соло</span>
+                </button>
+                <div class="accordion-content">
+                    <div class="accordion-content-inner">
+                        <div class="format-card">
+                            <h2 class="format-title">STALKER SOLO SC</h2>
+                            <p class="format-description">
+                                Індивідуальний формат, у якому кожен Stalker змагається сам за себе.  
+                                Один учасник — один сектор — один особистий результат.
+                            </p>
 
-    <div class="accordion-content">
-        <div class="accordion-content-inner">
-            <div class="format-card">
+                            <div class="format-section">
+                                <h3 class="section-title">Підрахунок результатів</h3>
+                                <ul class="format-list">
+                                    <li><strong>Загальна вага</strong> — основний критерій.</li>
+                                    <li><strong>Зони A, B, C</strong> — усі учасники діляться на 3 зони.</li>
+                                </ul>
+                            </div>
 
-                <h2 class="format-title">STALKER SOLO SC</h2>
-
-                <p class="format-description">
-                    Індивідуальний формат, у якому кожен Stalker змагається сам за себе.  
-                    Один учасник — один сектор — один особистий результат.
-                </p>
-
-                <div class="format-section">
-                    <h3 class="section-title">Підрахунок результатів</h3>
-                    <ul class="format-list">
-                        <li><strong>Загальна вага</strong> — основний критерій.</li>
-                        <li><strong>Зони A, B, C</strong> — усі учасники діляться на 3 зони.</li>
-                    </ul>
-                </div>
-
-                <div class="highlight-box">
-                    <h4 class="highlight-title">Нагородження</h4>
-                    <p class="highlight-text">
-                        <strong>Кубки та призи "Топ Озера"</strong>:  
-                        1 місце · 2 місце · 3 місце (загальний залік).
-                        <br><br>
-                        <strong>Зональні нагороди</strong> (A, B, C):  
-                        1, 2, 3 місця у кожній зоні.
-                        <br><br>
-                        Призи та подарунки від партнерів та спонсорів.
-                    </p>
-                </div>
-
-            </div>
-        </div>
-    </div>
-</article>
-</div>
+                            <div class="highlight-box">
+                                <h4 class="highlight-title">Нагородження</h4>
+                                <p class="highlight-text">
+                                    <strong>Кубки та призи "Топ Озера"</strong>:  
+                                    1 місце · 2 місце · 3 місце (загальний залік).
+                                    <br><br>
+                                    <strong>Зональні нагороди</strong> (A, B, C):  
+                                    1, 2, 3 місця у кожній зоні.
+                                    <br><br>
+                                    Призи та подарунки від партнерів та спонсорів.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -571,7 +562,7 @@
                     <div class="accordion-content-inner">
                         <div class="format-card">
                             <h2 class="format-title">STALKER TEAMS</h2>
-                            <p class="format-description">Командний формат з індивідуальним розподілом по зонам — стратегія має ключове значення.</p>
+                            <p class="format-description">Командний формат з індивідуальним розподілом по зонах — стратегія має ключове значення.</p>
                             
                             <div class="format-section">
                                 <h3 class="section-title">Принцип</h3>
@@ -695,70 +686,67 @@
                             <div class="format-section">
                                 <h3 class="section-title">1) BIGFISH TOTAL</h3>
 
-<p>
-    BigFish Total — окрема номінація, в якій беруть участь 
-    <strong>бажаючі команди</strong>.
-</p>
+                                <p>
+                                    BigFish Total — окрема номінація, в якій беруть участь 
+                                    <strong>бажаючі команди</strong>.
+                                </p>
 
-<p><strong>Вартість одноразового внеску: 1500 грн</strong></p>
+                                <p><strong>Вартість одноразового внеску: 1500 грн</strong></p>
 
-<p>Переможці визначаються у трьох окремих категоріях:</p>
+                                <p>Переможці визначаються у трьох окремих категоріях:</p>
 
-<ul class="format-list">
-    <li>
-        <strong>Big Fish Day 1</strong> — найбільша риба, спіймана 
-        протягом <strong>першої доби</strong> (зважування №1 та №2)
-    </li>
+                                <ul class="format-list">
+                                    <li>
+                                        <strong>Big Fish Day 1</strong> — найбільша риба, спіймана 
+                                        протягом <strong>першої доби</strong> (зважування №1 та №2)
+                                    </li>
 
-    <li>
-        <strong>Big Fish Day 2</strong> — найбільша риба, спіймана 
-        протягом <strong>другої доби</strong> (зважування №3 та №4)
-    </li>
+                                    <li>
+                                        <strong>Big Fish Day 2</strong> — найбільша риба, спіймана 
+                                        протягом <strong>другої доби</strong> (зважування №3 та №4)
+                                    </li>
 
-    <li>
-        <strong>Big Fish Overall</strong> — 
-        <u>найбільша риба серед усіх учасників BigFish Total</u>
-    </li>
-</ul>
+                                    <li>
+                                        <strong>Big Fish Overall</strong> — 
+                                        <u>найбільша риба серед усіх учасників BigFish Total</u>
+                                    </li>
+                                </ul>
+                            </div>
 
-<p>
+                            <div class="format-section">
+                                <h3 class="section-title">2) Трофейна Десятка</h3>
 
-</p>
+                                <p>
+                                    «Трофейна Десятка» — окремий залік, у якому беруть участь 
+                                    <strong>бажаючі команди</strong>.  
+                                    У кожному з чотирьох зважувань формується таблиця з 
+                                    <strong>10 найбільших риб</strong> серед усіх учасників цього заліку.
+                                </p>
 
-     <div class="format-section">
-    <h3 class="section-title">2) Трофейна Десятка</h3>
+                                <p>
+                                    До заліку потрапляють лише риби вагою 
+                                    <strong>від 5.000 кг</strong>.  
+                                    Коли таблиця заповнена (10 риб), кожна наступна більша риба 
+                                    <strong>вибиває найменшу</strong> зі списку.
+                                </p>
 
-    <p>
-        «Трофейна Десятка» — окремий залік, у якому беруть участь 
-        <strong>бажаючі команди</strong>.  
-        У кожному з чотирьох зважувань формується таблиця з 
-        <strong>10 найбільших риб</strong> серед усіх учасників цього заліку.
-    </p>
+                                <p>
+                                    У Трофейній Десятці можуть бути риби будь-якої кількості команд —  
+                                    <strong>від 1 до 10 риб однієї команди</strong>, якщо вони входять у топ-10 зважування.
+                                </p>
 
-    <p>
-        До заліку потрапляють лише риби вагою 
-        <strong>від 5.000 кг</strong>.  
-        Коли таблиця заповнена (10 риб), кожна наступна більша риба 
-        <strong>вибиває найменшу</strong> зі списку.
-    </p>
+                                <p>
+                                    Призова сума кожного зважування формується з внесків учасників, 
+                                    тому <strong>залежить від кількості команд, що беруть участь</strong>.  
+                                    Кожна риба, що потрапила у Трофейну Десятку, приносить команді 
+                                    <strong>виплату за одне місце</strong>.
+                                </p>
+                            </div>                        
 
-    <p>
-        У Трофейній Десятці можуть бути риби будь-якої кількості команд —  
-        <strong>від 1 до 10 риб однієї команди</strong>, якщо вони входять у топ-10 зважування.
-    </p>
-
-    <p>
-        Призова сума кожного зважування формується з внесків учасників, 
-        тому <strong>залежить від кількості команд, що беруть участь</strong>.  
-        Кожна риба, що потрапила у Трофейну Десятку, приносить команді 
-        <strong>виплату за одне місце</strong>.
-    </p>
-</div>                        
-
-  </div>
- </div>
-</div>
-</article>
+                        </div>
+                    </div>
+                </div>
+            </article>
 
         </div>
     </div>
