--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
     <nav class="nav" id="nav">
       <a href="/index.html" class="nav__link">Головна</a>
       <a href="/rules.html" class="nav__link">Регламент</a>
-      <a href="/formats.html" class="nav__link">Формати змагань</a>
+      <a href="/formats.html" class="nav__link">Формат змагань</a>
       <a href="/register.html" class="nav__link">Реєстрація</a>
       <a href="/live.html" class="nav__link">Live</a>
       <a href="/rating.html" class="nav__link">Рейтинг</a>
