--- a/index.html
+++ b/index.html
@@ -337,7 +337,8 @@
 
     /* КНОПКА "УВІЙТИ" В ХЕДЕРІ */
     .header-login{
-      margin-left:12px;
+      margin-left:auto;
+      margin-right:12px;
       padding:6px 14px;
       border-radius:999px;
       border:1px solid rgba(148,163,184,.6);
