--- a/formats.html
+++ b/formats.html
@@ -449,7 +449,15 @@
         <li>2 місце — <strong>10 000 грн</strong></li>
         <li>3 місце — <strong>8 000 грн</strong></li>
     </ul>
-
+    
+     <h3 class="section-title">Зміщення місць у зонах</h3>
+<ul class="format-list">
+    <li>При виключенні ТОП-команд у зональному заліку відбувається зміщення місць:</li>
+    <li>2 місце → стає 1 місцем</li>
+    <li>3 місце → стає 2 місцем</li>
+    <li>4 місце → стає 3 місцем</li>
+</ul>
+    
     <h3 class="section-title">Нагороди</h3>
     <ul class="format-list">
         <li><strong>Кубки "Топи озера"</strong> — 1, 2, 3 місце</li>
