--- a/formats.html
+++ b/formats.html
@@ -511,6 +511,29 @@
                                 <p><em>Приклад:</em> якщо команда зайняла 2 місце в загальному заліку і стояла в зоні А, вона отримує "2 місце озера", а НЕ "2 місце зони А". Тоді "2 місце зони А" дістається наступній команді з цієї зони.</p>
                             </div>
 
+                            <h3 class="section-title">Нагородження</h3>
+
+                 <ul class="format-list">
+                  <li><strong>ТОП — озера</strong></li>
+                 <li>Призовий фонд при участі 21 команди:</li>
+                 <li>1 місце — <strong>20 000 грн</strong></li>
+                 <li>2 місце — <strong>15 000 грн</strong></li>
+                 <li>3 місце — <strong>10 000 грн</strong></li>
+                </ul>
+
+               <h4 class="section-title">Зміщення місць у зонах</h4>
+                <ul class="format-list">
+              <li>При виключенні ТОП-команд</li>
+           </ul>
+
+               <h4 class="section-title">Кубки та нагороди у зонах</h4>
+                 <ul class="format-list">
+                 <li>Зона А — 1, 2, 3 місця</li>
+                 <li>Зона B — 1, 2, 3 місця</li>
+                <li>Зона C — 1, 2, 3 місця</li>
+              <li>Також призи від наших партнерів та спонсорів</li>
+            </ul>
+
                             <div class="highlight-box">
                                 <h4 class="highlight-title">Важливо</h4>
                                 <p class="highlight-text">Переможці визначаються виключно за спортивним результатом (сума місць у трьох таблицях), а не за зоною розташування.</p>
