--- a/formats.html
+++ b/formats.html
@@ -506,9 +506,10 @@
                             </div>
 
                             <div class="format-section">
-                                <h3 class="section-title">Зональні нагороди</h3>
-                                <p>У кожній зоні (А, B, C) нагороджуються місця 1–3 зі зміщенням.</p>
-                                <p><em>Приклад:</em> якщо команда зайняла 2 місце в загальному заліку і стояла в зоні А, вона отримує "2 місце озера", а НЕ "2 місце зони А". Тоді "2 місце зони А" дістається наступній команді з цієї зони.</p>
+    <h3 class="section-title">Зональні нагороди</h3>
+    <p>У кожній зоні (A, B, C) нагороджуються 1–3 місця.</p>
+    <p>ТОП-команди виключаються із зонального заліку (у зоні може бути 2 або 3 ТОП-команди).</p>
+    <p>Після виключення ТОП-команд інші команди в зоні автоматично зміщуються на вище місце.</p>
                             </div>
 
                             <h3 class="section-title">Нагородження</h3>
