--- a/formats.html
+++ b/formats.html
@@ -385,6 +385,7 @@
         Кожен етап проходить у класичному форматі змагань. Результат визначається 
         <strong>за загальною вагою зловленої риби</strong>.  
         У змаганнях беруть участь <strong>три зони: A, B, C</strong>.
+        <li> Внесок: 3500 грн </li>
     </p>
 
     <ul class="format-list">
@@ -431,6 +432,7 @@
     <h3 class="section-title">Фінал сезону</h3>
     <p>
         У фіналі берують участь лише 18 команд, що пройшли відбір.
+        Внесок: 5000 грн
     </p>
 
     <div class="highlight-box">
