--- a/formats.html
+++ b/formats.html
@@ -385,7 +385,7 @@
         Кожен етап проходить у класичному форматі змагань. Результат визначається 
         <strong>за загальною вагою зловленої риби</strong>.  
         У змаганнях беруть участь <strong>три зони: A, B, C</strong>.
-        <li> Внесок: 3500 грн </li>
+        <strong> Внесок: 3500 грн </strong>
     </p>
 
     <ul class="format-list">
@@ -431,8 +431,8 @@
 <div class="format-section">
     <h3 class="section-title">Фінал сезону</h3>
     <p>
-        У фіналі берують участь лише 18 команд, що пройшли відбір.
-        Внесок: 5000 грн
+        У фіналі берують участь лише 18 команд, що пройшли відбір.                 
+         <strong> Внесок: 5000 грн </strong> 
     </p>
 
     <div class="highlight-box">
@@ -491,7 +491,9 @@
                     <div class="accordion-content-inner">
                         <div class="format-card">
                             <h2 class="format-title">Формат — 3 Таблиці</h2>
-                            <p class="format-description">Унікальна система оцінки, де команди змагаються одночасно у трьох різних заліках.</p>
+                            <p class="format-description">Унікальна система оцінки, де команди змагаються одночасно у трьох різних заліках.
+                                <strong> Внесок:6000 грн </strong>
+                            </p>
                             
                             <div class="format-section">
                                 <h3 class="section-title">Основна логіка</h3>
@@ -593,35 +595,74 @@
                     STALKER TEAMS
                     <span class="accordion-indicator">Командно-індивідуальний</span>
                 </button>
-                <div class="accordion-content">
-                    <div class="accordion-content-inner">
-                        <div class="format-card">
-                            <h2 class="format-title">STALKER TEAMS</h2>
-                            <p class="format-description">Командний формат з індивідуальним розподілом по зонах — стратегія має ключове значення.</p>
-                            
-                            <div class="format-section">
-                                <h3 class="section-title">Принцип</h3>
-                                <p>Команда реєструється однією заявкою, але учасники виступають окремо в різних зонах:</p>
-                                <ul class="format-list">
-                                    <li>Учасник 1 → Зона A</li>
-                                    <li>Учасник 2 → Зона B</li>
-                                    <li>Учасник 3 → Зона C</li>
-                                </ul>
-                            </div>
+                <div class="format-card">
+    <h2 class="format-title">STALKER TEAMS</h2>
+    <p class="format-description">
+        Командний формат з індивідуальним розподілом по зонах — стратегія має ключове значення.
+    </p>
 
-                            <div class="format-section">
-                                <h3 class="section-title">Підрахунок</h3>
-                                <ul class="format-list">
-                                    <li>Місце учасника в своїй зоні = кількість балів (1 місце = 1 бал)</li>
-                                    <li>Командний результат = сума балів трьох учасників</li>
-                                    <li>Тай-брейк у разі рівності балів — сумарна вага трьох учасників</li>
-                                </ul>
-                            </div>
+    <!-- Принцип -->
+    <div class="format-section">
+        <h3 class="section-title">Принцип</h3>
+        <p>Команда реєструється однією заявкою, але учасники виступають окремо в різних зонах:</p>
+        <ul class="format-list">
+            <li>Учасник 1 → Зона A</li>
+            <li>Учасник 2 → Зона B</li>
+            <li>Учасник 3 → Зона C</li>
+        </ul>
+    </div>
 
-                            <div class="highlight-box">
-                                <h4 class="highlight-title">Пам'ятайте</h4>
-                                <p class="highlight-text"><strong>Менше балів = краще місце команди.</strong> Ідеальний результат — 3 бали (три перших місця в зонах).</p>
-                            </div>
+    <!-- Склад та умови -->
+    <div class="format-section">
+        <h3 class="section-title">Склад та умови</h3>
+        <ul class="format-list">
+            <li>3 учасники в команді</li>
+            <li>Ловля — соло, фізична допомога заборонена</li>
+            <li><strong>Внесок:</strong> 6 500 грн з учасника (19 500 грн з команди)</li>
+        </ul>
+    </div>
+
+    <!-- Підрахунок -->
+    <div class="format-section">
+        <h3 class="section-title">Підрахунок</h3>
+        <ul class="format-list">
+            <li>Місце учасника в своїй зоні = кількість балів (1 місце = 1 бал)</li>
+            <li>Командний результат = сума балів трьох учасників</li>
+            <li>Тай-брейк у разі рівності балів — сумарна вага трьох учасників</li>
+        </ul>
+    </div>
+
+    <!-- Призи -->
+    <div class="format-section">
+        <h3 class="section-title">Призи та нагороди</h3>
+
+        <p><strong>Командний призовий фонд</strong> (при участі 8 команд):</p>
+        <ul class="format-list">
+            <li>🥇 1 місце — 30 000 грн</li>
+            <li>🥈 2 місце — 24 000 грн</li>
+            <li>🥉 3 місце — 21 000 грн</li>
+        </ul>
+
+        <p><strong>Індивідуальний залік у зонах</strong> (A, B, C):</p>
+        <ul class="format-list">
+            <li>🥇 1 місце — Кубок + приз</li>
+            <li>🥈 2 місце — Кубок + приз</li>
+            <li>🥉 3 місце — Кубок + приз</li>
+        </ul>
+
+        <p>Усього: <strong>9 індивідуальних призів</strong></p>
+    </div>
+
+    <!-- Пам'ятайте -->
+    <div class="highlight-box">
+        <h4 class="highlight-title">Пам'ятайте</h4>
+        <p class="highlight-text">
+            <strong>Менше балів = краще місце команди.</strong><br>
+            Ідеальний результат — 3 бали (три перших місця).
+        </p>
+    </div>
+
+</div>
                         </div>
                     </div>
                 </div>
