--- a/rules.html
+++ b/rules.html
@@ -101,6 +101,18 @@
 
     <h3>2.3. Технічні уточнення</h3>
     <ul>
+      <h3>2.4. Формування організаційного фонду</h3>
+<p>Командні внески формують єдиний організаційний фонд, з якого покриваються всі витрати на проведення турніру. До цього фонду входять:</p>
+
+<ul>
+  <li>оплата оренди водойми;</li>
+  <li>робота суддів та організаторської групи;</li>
+  <li>оплата доставки призів від партнерів та спонсорів;</li>
+  <li>фінансування додаткових призів та заохочень;</li>
+  <li>виготовлення кубків, медалей та нагород для зон.</li>
+</ul>
+
+<p><strong>Організатор має право розподіляти фонд відповідно до потреб турніру.</strong></p>
       <li>Організатор має право вносити технічні уточнення до регламенту, які не змінюють суті змагань, з обов'язковим повідомленням учасників до старту.</li>
     </ul>
 
