--- a/formats.html
+++ b/formats.html
@@ -725,26 +725,120 @@
                 </div>
             </article>
 
-            <!-- Залік 20 -->
-            <article class="accordion-item">
-                <button class="accordion-header">
-                    Залік 20
-                    <span class="accordion-indicator">ТОП-20</span>
-                </button>
-                <div class="accordion-content">
-                    <div class="accordion-content-inner">
-                        <div class="format-card">
-                            <h2 class="format-title">Залік 20</h2>
-                            
-                            <div class="format-section">
-                                <h3 class="section-title">Суть</h3>
-                                <p>У залік йдуть 20 найбільших риб, спійманих командою. Сумарна вага цих 20 риб визначає переможців.</p>
-                                <p>Цей формат стимулює ловлю не просто будь-якої риби, а саме трофейних екземплярів.</p>
-                            </div>
-                        </div>
-                    </div>
+            <!-- Трофейні 15 · Cobra -->
+<article class="accordion-item">
+    <button class="accordion-header">
+        Трофейні 15 · Cobra
+        <span class="accordion-indicator">TOP-15</span>
+    </button>
+
+    <div class="accordion-content">
+        <div class="accordion-content-inner">
+
+            <div class="format-card">
+                <h2 class="format-title">Трофейні 15 · Cobra</h2>
+
+                <!-- Суть формату -->
+                <div class="format-section">
+                    <h3 class="section-title">Суть</h3>
+                    <p><strong>“Трофейні 15 · Cobra”</strong> — трофейний формат, у якому в залік потрапляють лише 
+                    <strong>15 найбільших риб команди</strong>, впорядкованих за вагою по спаданню.</p>
+                    <p>Усі інші риби не впливають на результат. Формат орієнтований виключно на ловлю великої риби.</p>
                 </div>
-            </article>
+
+                <!-- Види -->
+                <div class="format-section">
+                    <h3 class="section-title">Зараховувані види</h3>
+                    <ul>
+                        <li>Короп</li>
+                        <li>Амур</li>
+                    </ul>
+                </div>
+
+                <!-- Формування результату -->
+                <div class="format-section">
+                    <h3 class="section-title">Формування результату</h3>
+                    <ul>
+                        <li>Протягом турніру команда зважує всі риби.</li>
+                        <li>У залік автоматично потрапляють <strong>15 найбільших риб</strong>.</li>
+                        <li>Результат визначається за <strong>сумарною вагою TOP-15</strong>.</li>
+                        <li><strong>Перемагає команда</strong> з найбільшою сумою ваги цих 15 риб.</li>
+                    </ul>
+                </div>
+
+                <!-- Тай-брейки -->
+                <div class="format-section">
+                    <h3 class="section-title">Тай-брейки</h3>
+                    <p>При однаковій сумі ваги:</p>
+                    <ul>
+                        <li>Перевага команді з <strong>більшою найбільшою рибою</strong>.</li>
+                        <li>Якщо однакова — за другою найбільшою.</li>
+                        <li>Далі третьою, і так по всьому списку TOP-15.</li>
+                    </ul>
+                </div>
+
+                <!-- Параметри -->
+                <div class="format-section">
+                    <h3 class="section-title">Параметри турніру</h3>
+                    <ul>
+                        <li><strong>Тривалість:</strong> 72 години</li>
+                        <li><strong>Кількість команд:</strong> до 21</li>
+                        <li><strong>Склад команди:</strong> до 4 учасників</li>
+                        <li><strong>Внесок:</strong> 8900 грн / команда</li>
+                    </ul>
+                </div>
+
+                <!-- Абсолютні призи -->
+                <div class="format-section">
+                    <h3 class="section-title">Абсолютні призи TOP-15 (100 000 грн)</h3>
+                    <ul>
+                        <li><strong>1 місце — 40 000 грн</strong></li>
+                        <li><strong>2 місце — 33 000 грн</strong></li>
+                        <li><strong>3 місце — 27 000 грн</strong></li>
+                    </ul>
+                </div>
+
+                <!-- Зональні -->
+                <div class="format-section">
+                    <h3 class="section-title">Зональні призи (окремо від TOP-15)</h3>
+                    <p>У кожній зоні нагороджуються три найкращі команди:</p>
+
+                    <h4>Зона А</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+
+                    <h4>Зона B</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+
+                    <h4>Зона C</h4>
+                    <ul>
+                        <li>1 місце</li>
+                        <li>2 місце</li>
+                        <li>3 місце</li>
+                    </ul>
+                </div>
+
+                <!-- Номінації -->
+                <div class="format-section">
+                    <h3 class="section-title">Номінації</h3>
+                    <ul>
+                        <li><strong>Найбільший короп</strong></li>
+                        <li><strong>Найбільший амур</strong></li>
+                    </ul>
+                    <p>Переможці цих номінацій визначаються окремо та не впливають на залік TOP-15 і зональні місця.</p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</article>
 
             <!-- Шапки (Prize Pools) -->
             <article class="accordion-item">
