--- a/formats.html
+++ b/formats.html
@@ -771,7 +771,7 @@
                     <h3 class="section-title">Тай-брейки</h3>
                     <p>При однаковій сумі ваги:</p>
                     <ul>
-                        <li>Перевага команді з <strong>більшою найбільшою рибою</strong>.</li>
+                        <li>Перевага команді з <strong>найбільшою рибою</strong>.</li>
                         <li>Якщо однакова — за другою найбільшою.</li>
                         <li>Далі третьою, і так по всьому списку TOP-15.</li>
                     </ul>
@@ -782,7 +782,7 @@
                     <h3 class="section-title">Параметри турніру</h3>
                     <ul>
                         <li><strong>Тривалість:</strong> 72 години</li>
-                        <li><strong>Кількість команд:</strong> до 21</li>
+                        <li><strong>Кількість команд:</strong>  21</li>
                         <li><strong>Склад команди:</strong> до 4 учасників</li>
                         <li><strong>Внесок:</strong> 8900 грн / команда</li>
                     </ul>
@@ -832,7 +832,7 @@
                         <li><strong>Найбільший короп</strong></li>
                         <li><strong>Найбільший амур</strong></li>
                     </ul>
-                    <p>Переможці цих номінацій визначаються окремо та не впливають на залік TOP-15 і зональні місця.</p>
+                    <p>Переможці цих номінацій визначаються окремо</p>
                 </div>
 
             </div>
